fix image container size (prevent layout shift)

--- a/frontend/app/drawings/drawings.module.scss
+++ b/frontend/app/drawings/drawings.module.scss
@@ -84,9 +84,11 @@
 
   &__image-container {
     position: relative;
+    width: 100%;
 
     img {
-      max-width: 100%;
+      display: block;
+      width: 100%;
       height: auto;
     }
   }
